--- a/src/views/partials/_nav.hbs
+++ b/src/views/partials/_nav.hbs
@@ -31,7 +31,7 @@
         </li>
       </ul>
       <div class="d-flex align-items-center">
-        <a class="btn btn-light me-3" href="/login">
+        <a class="btn btn-light me-3" href="/singin">
           Login / Criar Conta
         </a>
       </div>
