--- a/src/views/user/dashboard.hbs
+++ b/src/views/user/dashboard.hbs
@@ -1,3 +1,4 @@
+{{>_msg}}
 {{>_navUser}}
 <div class="container h-100">
     <div class="bg-white p-3 pb-4 mt-3 rounded-3">
@@ -44,5 +45,5 @@
         </div>
     </div>
 </div>
-
 {{>_footer}}
+
