--- a/src/public/assets/css/main.css
+++ b/src/public/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -10,13 +11,13 @@ body {
   background-color: rgb(234, 234, 234);
 }
 
-.h1-home{
+.h1-home {
   font-weight: 700;
   line-height: 1.16;
-  font-size: 5vw
+  font-size: 5vw;
 }
 
-h1{
+h1 {
   font-weight: 700;
   line-height: 1.16;
   font-size: 24px;
@@ -28,7 +29,7 @@ h3 {
   font-size: 3rem;
 }
 
-.p-1{
+.p-1 {
   font-weight: 500;
   letter-spacing: -0.03em;
   font-size: 1.5rem;
@@ -48,14 +49,14 @@ h3 {
   transition: 0.4s;
 }
 
-.div-center{
+.div-center {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
-.h1-icon{
+.h1-icon {
   display: inline-block;
   border-radius: 60px;
   box-shadow: 0 0 2px #888;
@@ -63,20 +64,89 @@ h3 {
   font-size: 18px;
 }
 
-.h2-courses{
+.h2-courses {
   font-weight: 600;
   font-size: 22px;
 }
 
-.h4-courses{
+.h4-courses {
   font-size: 14px;
 }
 
-.h5-courses{
+.h5-courses {
   font-size: 25px;
   font-weight: 600;
 }
 
-.h6-courses{
+.h6-courses {
   font-size: 12px;
+}
+
+#snackbar {
+  visibility: hidden;
+  min-width: 250px;
+  margin-left: -125px;
+  color: #fff;
+  text-align: center;
+  border-radius: 2px;
+  padding: 16px;
+  position: fixed;
+  z-index: 1;
+  left: 50%;
+  bottom: 30px;
+  font-size: 17px;
+}
+
+#snackbar.show {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+
+@keyframes fadein {
+  from {
+    bottom: 0;
+    opacity: 0;
+  }
+
+  to {
+    bottom: 30px;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
+}
+
+@keyframes fadeout {
+  from {
+    bottom: 30px;
+    opacity: 1;
+  }
+
+  to {
+    bottom: 0;
+    opacity: 0;
+  }
 }
