--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -6,11 +6,14 @@
     <link rel="stylesheet" href="/assets/css/mdb.min.css" />
     <link rel="stylesheet" href="/assets/fonts/remixicon.css" />
     <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/toastr.min.css">
     <title>Cursos Esportivos</title>
   </head>
   <body>
     {{{body}}}
   </body>
   <script src="/assets/js/mdb.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
   <script src="/assets/js/script.js"></script>
 </html>
